# matrix-app-services

./: .gitignore  Cargo.toml  README.md
matrix-app-services/: Cargo.toml
matrix-app-services-scratchpad/: Cargo.toml
matrix-app-services-scratchpad/src/: main.rs
matrix-app-services/src/: client.rs  error.rs  lib.rs  util.rs  virtual_client.rs
matrix-app-services/src/servers/: appservice.rs  mod.rs  proxy.rs
matrix-app-services/src/types/: appservice.rs  config.rs  mod.rs  proxy.rs  state.rs  user.rs
