[workspace]
resolver = "3"
members = ["matrix-app-services", "matrix-app-services-scratchpad"]

[workspace.dependencies]
matrix-app-services = {path = "./matrix-app-services"}
anyhow = "1.0.100"
bon = "3.8.1"
chrono = "0.4.42"
matrix-sdk = "0.14.0"
reqwest = "0.12.23"
ruma = "0.13.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde_norway = "0.9.42"
thiserror = "2.0.17"
tokio = "1.47.1"
tower = "0.5.2"
