[package]
name = "matrix-app-services-scratchpad"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
matrix-sdk = { workspace = true, features = ["anyhow", "markdown", "bundled-sqlite"] }
reqwest = { workspace = true, features = ["json", "http3", "stream"] }
ruma = { workspace = true, features = ["appservice-api", "client-api"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_norway = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["tokio", "util", "timeout", "retry", "tokio-stream", "tokio-util"] }
