[package]
name = "matrix-app-services"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
bon = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
ciborium = { workspace = true }
genrs = { workspace = true }
getset = { workspace = true }
matrix-sdk = { workspace = true, features = ["anyhow", "markdown", "bundled-sqlite"] }
openport = { workspace = true }
parking_lot = { workspace = true, features = ["serde", "arc_lock", "send_guard"] }
rcgen = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "rustls-tls"] }
ruma = { workspace = true, features = ["appservice-api", "client-api"] }
rustls = { workspace = true, features = ["ring"]}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_norway = { workspace = true }
sled = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["tokio", "util", "timeout", "retry", "tokio-stream", "tokio-util"] }
url = { workspace = true, features = ["serde"] }
